--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2000-02-21  Gary V. Vaughan  <gary@oranda.demon.co.uk>
 
+	* libltdl/ltdl.c (lt_find_dlhandle): New function.
+	(tryall_dlopen): Use it.
+	* libltdl/ltdl.h:  Prototype it.
+	* doc/libtool.texi: Document it.
+	* NEWS: updated.
+
 	* libltdl/ltdl.c (lt_dlinit): removed unused variable, `loader'.
 	
 	* libltdl/ltdl.c (lt_remove_dlloader): typo, s/=/==/g.
