--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+2000-02-23  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+
+	* configure.in: Due to a bug in autoconf-2.13 implementation of
+	AC_SUBST, `AC_SUBST(FILE)' can never work.  Use MAGIC as the
+	holder of the command to run in file_magic_cmd instead.
+	* ltconfig.in: s/FILE/MAGIC/g.
+	* libtool.m4 (AC_PROG_LIBTOOL): set MAGIC in the environment when
+	calling ltconfig.
+	(AC_PATH_MAGIC):  renamed from AC_PATH_FILE.
+	(AC_PATH_TOOL_PREFIX):  s/FILE/MAGIC/g.  Also set file_magic_cmd
+	to '${MAGIC}' so that make can grok it.
+	* Makefile.am (libtool):
+	(clibtool): ditto.
+	
 2000-02-21  Gary V. Vaughan  <gary@oranda.demon.co.uk>
 
 	* libltdl/ltdl.c (lt_find_dlhandle): New function.
