* libltdl/ltdl.c (lt_find_dlhandle): Deleted.  This was B.S. far cleaner to use lt_dlforeach and lt_dlgetinfo. * libltdl/ltdl.h:  Prototype deleted. * doc/libtool.texi: Documentation deleted. * NEWS: annoncement deleted.

--- a/NEWS
+++ b/NEWS
@@ -8,15 +8,13 @@ New in 1.3d: 2000-??-??; CVS version 1.3c, Libtool team:
 * Support for hardcoding run-time paths (-R) into libraries.
 * Support -dlopen and -dlpreopen for libraries.
 * Libtool now allows you to link shared libraries against static code.
-* New functions lt_dlgetdata, lt_dlsetdata, lt_dlgetinfo, lt_dlforeach
-  in libltdl can be used to store application specific data in handles.
+* New functions lt_dlgetinfo, lt_dlforeach in libltdl can be used to
+  access module specific data in handles.
 * New functions lt_next_dlloader, lt_dlloader_name, lt_find_dlloader,
   lt_add_dlloader in libltdl can be used for adding new types of module
   loader to libltdl..
 * New functions lt_dladderror, lt_dlseterror in libltdl can be used to
   integrate user module loaders with lt_dlerror.
-* New function lt_find_dlhandle can be used to lookup the handle
-  associated with a previously dlopened filename.
 * "-Xcompiler" and "-Wc," does now work in compile mode, too.
 * Start of support code for cross-compiling to win32.
 * libltdl can now be built as a dll with win32.
