--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2000-02-03  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+
+	* libltdl/ltdl.c (lt_find_dlhandle): Deleted.  This was B.S.
+	far cleaner to use lt_dlforeach and lt_dlgetinfo.
+	* libltdl/ltdl.h:  Prototype deleted.
+	* doc/libtool.texi: Documentation deleted.
+	* NEWS: annoncement deleted.
+
 2000-02-23  Thomas Tanner  <tanner@ffii.org>
 
 	* ltmain.in: remove duplicates from deplibs, handle
