--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2000-03-14  Christopher A. Knight  <chriskn@crt.com>
+
+	* ltconfig.in: added main() definition in compile
+	check for header `dlfcn.h' to fix link errors 
+	when built with Sun Workshop Pro CC 4.2 (and perhaps
+	others).
+ 
 2000-02-03  Gary V. Vaughan  <gary@oranda.demon.co.uk>
 
 	* libltdl/ltdl.c (lt_find_dlhandle): Deleted.  This was B.S.
