--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2000-04-11  Thomas Tanner  <tanner@ffii.org>
+
+	* NEWS: update
+	* libtool.m4: add AC_LIBTOOL_PICMODE
+	* ltconfig.in: move pic_mode checks to ltmain.in
+	* ltmain.in: add -prefer-pic and -prefer-non-pic
+	
 2000-03-29  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>
 
 	* ltmain.in (tmpdir): Do not accept an existing directory, and
