--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,8 @@ NEWS - list of user-visible changes between releases of GNU Libtool
 
 New in 1.3d: 2000-??-??; CVS version 1.3c, Libtool team:
 * New -no-install flag to avoid the use of executable wrapper scripts.
-* New --with-pic flag to control the generation of PIC/non-PIC code.
+* New --with-pic, -prefer-pic and -prefer-non-pic flags to control
+  the generation of PIC/non-PIC code.
 * New --build flag to ltconfig to help with build cross compilation
   environments is inherited from --build flag passed to configure.
 * Support for hardcoding run-time paths (-R) into libraries.
