--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-05-02  Gary V. Vaughan  <gvv@techie.com>
+
+	* AUTHORS:  Update my email address.
+	* commit: ditto.
+
 2000-04-11  Thomas Tanner  <tanner@ffii.org>
 
 	* NEWS: update
@@ -43,7 +48,7 @@
 	when built with Sun Workshop Pro CC 4.2 (and perhaps
 	others).
  
-2000-02-03  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+2000-02-03  Gary V. Vaughan  <gvv@techie.com>
 
 	* libltdl/ltdl.c (lt_find_dlhandle): Deleted.  This was B.S.
 	far cleaner to use lt_dlforeach and lt_dlgetinfo.
@@ -76,7 +81,7 @@
 	* libtool.m4: recognize powerpc*linux* (reported by
 	  Dirk A. Mueller <dmuell@gmx.net>)
 
-2000-02-23  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+2000-02-23  Gary V. Vaughan  <gvv@techie.com>
 
 	* ltconfig.in (old_MAGIC, old_STRIP, old_reload_flag,
 	old_deplibs_check_method, old_file_magic_cmd):  New variabes.
@@ -97,7 +102,7 @@
 	* Makefile.am (libtool):
 	(clibtool): ditto.
 	
-2000-02-21  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+2000-02-21  Gary V. Vaughan  <gvv@techie.com>
 
 	* libltdl/ltdl.c (lt_find_dlhandle): New function.
 	(tryall_dlopen): Use it.
@@ -109,7 +114,7 @@
 	
 	* libltdl/ltdl.c (lt_remove_dlloader): typo, s/=/==/g.
 
-2000-02-03  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+2000-02-03  Gary V. Vaughan  <gvv@techie.com>
 
 	* libltdl/ltdl.h (lt_dlloader_data_t):  New type for loader
 	instance data.
@@ -151,7 +156,7 @@
 	with feeling!
 	(sys_wll_exit): Ditto.
 
-2000-02-02  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+2000-02-02  Gary V. Vaughan  <gvv@techie.com>
 
 	* NEWS: updated.
 	* doc/libtool.texi (Libltdl interface): Moved user defined module 
@@ -232,7 +237,7 @@
 	* ltmain.in: check whether libraries are moved out of $libdir,
 	  replace .a and .lib with .$libext, .o and .obj with .$objext
 
-2000-01-31  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+2000-01-31  Gary V. Vaughan  <gvv@techie.com>
 
 	* libltdl/ltdl.h (lt_dlrealloc): removed declaration.
 	* libltdl/ltdl.c (lt_dlrealloc): removed definition.
@@ -246,7 +251,7 @@
 	"-belf."
 	Reported by Chris Butler <chrisb@sandy.force9.co.uk>
 
-2000-01-28  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+2000-01-28  Gary V. Vaughan  <gvv@techie.com>
 
 	* libtool.m4 (AC_DEPLIBS_CHECK_METHOD):  Use changequote to
 	protect `[' and `]' in deplibs_check_method.
@@ -271,7 +276,7 @@
 	* ltmain.in: merge library linking code of programs and libraries,
 	  some cleanups
 
-2000-01-27  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+2000-01-27  Gary V. Vaughan  <gvv@techie.com>
 
 	* NEWS: Updated.
 	* doc/libtool.texi (Libltdl interface): Document new entry
@@ -385,18 +390,18 @@
 	* tests/Makefile.am: reexport OBJEXT and EXEEXT
 	* tests/dryrun.test: use them for building main.obj and mdemo.exe
 	
-2000-01-17  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+2000-01-17  Gary V. Vaughan  <gvv@techie.com>
 
 	* libltdl/ltdl.c (tryall_dlopen): Abort with
 	file_not_found_error before trying all lib_open() methods
 	if the file to be dlopened doesn't exist.
 	* ltdl.m4 (AC_HAVE_HEADERS): add unistd.h.
 
-2000-01-16  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+2000-01-16  Gary V. Vaughan  <gvv@techie.com>
 
 	* libltdl/ltdl.c (find_file): memory error fixed.
 
-2000-01-14  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+2000-01-14  Gary V. Vaughan  <gvv@techie.com>
 
 	* ltconfig.in (Usage): Now it matches the code!
 	Reported by Jon Leichter <jon@symas.com>
@@ -427,7 +432,7 @@
 	escaped and portable \{0,1\} in sed expression.
 	From Jon Leichter <jon@symas.com>
 
-2000-01-13  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+2000-01-13  Gary V. Vaughan  <gvv@techie.com>
 
 	* libtool.m4 (AC_LIBLTDL_CONVENIENCE): Add -I${top_srcdir}/libltdl
 	to default INCLTDL for VPATH.
@@ -468,7 +473,7 @@
 	* README: use 'libtool --version' instead of 'ltconfig --version'
 	  (suggested by Francios Pinard <pinard@iro.umontreal.ca>
 
-2000-01-10  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+2000-01-10  Gary V. Vaughan  <gvv@techie.com>
 
 	* libltdl/ltdl.h (LTDL_DIRSEP_CHAR): Leave undefined when
 	not compiling for a Windows target.
@@ -538,7 +543,7 @@
 	* bootstrap: use "aclocal -I ." instead of adding the contents
 	  of ltdl.m4 to acinclude.m4
 
-1999-12-13  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+1999-12-13  Gary V. Vaughan  <gvv@techie.com>
 
 	* NEWS: updated.
 	* libltdl/Makefile.am: Use -no-undefined for dll compliance.
@@ -560,7 +565,7 @@
 
 	* ltconfig.in (ltdll_obj): fixed typo: objdir -> $objdir
 
-1999-12-12  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+1999-12-12  Gary V. Vaughan  <gvv@techie.com>
 
 	* ltconfig.in (cygwin*, mingw*, export_symbols_cmds): keep any
 	DATA tags associated with symbols by recent dlltool.
@@ -568,13 +573,13 @@
 	found in the symbol list.
 	Reported by Jon Leichter <jon@symas.com>.
 
-1999-12-10  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+1999-12-10  Gary V. Vaughan  <gvv@techie.com>
 
 	From Stephan Kulow <coolo@kde.org>
 	* libltdl/ltdl.m4:  Add arg 3 to AC_DEFINE's to save the user
 	from having to hack acconfig.h.
 
-1999-12-06  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+1999-12-06  Gary V. Vaughan  <gvv@techie.com>
 
 	* NEWS: Updated.
 	* TODO: Note some cleanups that are now needed.
@@ -613,13 +618,13 @@
 
 	* ltconfig.in (linux-gnu*): Set hardcode_into_libs=yes.
 
-1999-11-29  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+1999-11-29  Gary V. Vaughan  <gvv@techie.com>
 
 	* ltconfig.in:  Be friendlier to C++ compilers when testing
 	for dlopen support.
 	Reported by Stephan Kulow <coolo@itm.mu-luebeck.de>
 
-1999-11-26  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+1999-11-26  Gary V. Vaughan  <gvv@techie.com>
 
 	* libtool.m4:  better use of $target instead of $host to support
 	cross compilation.
@@ -666,7 +671,7 @@
 
 	* ltconfig.in: add support for Unixware (sysv4.2uw2*)
 
-1999-10-29  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+1999-10-29  Gary V. Vaughan  <gvv@techie.com>
 
 	* ltmain.in:  Damnit!  Cygwin cvs committed all the
 	dos line endings.
@@ -702,7 +707,7 @@
 	* libltdl/ltdl.c (lt_dlopen): Do not search paths when the
 	specified library is not just a basename.
 
-1999-10-10  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+1999-10-10  Gary V. Vaughan  <gvv@techie.com>
 
 	* libtool.m4 (AC_PATH_FILE): new macro replaces
 	AC_PATH_TOOL_GREP_OUTPUT.
@@ -713,7 +718,7 @@
 	* ltconfig.in (reload_flag): moved to libtool.m4.
 	(deplbs_check_method): ditto.
 
-1999-10-07  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+1999-10-07  Gary V. Vaughan  <gvv@techie.com>
 
 	* libtool.m4 (AC_PATH_PROG_VERSION_GREP): removed in favour of the 
 	more general AC_PATH_PROG_GREP_OUTPUT.
@@ -722,13 +727,13 @@
 	(AC_PROG_LIBTOOL):  Search for a working find program in the
 	user's PATH using the new macros.
 	
-1999-10-06  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+1999-10-06  Gary V. Vaughan  <gvv@techie.com>
 
 	* NEWS: updtaed.
         * ltconfig.in: Accept osf5.
         Reported by Sascha Schumann <sascha@schumann.cx>
 
-1999-10-04  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+1999-10-04  Gary V. Vaughan  <gvv@techie.com>
 
 	* ltmain.in (-no-install):  This doesn't work on win32 since
 	the search path for libraries is not encoded in the binary,
@@ -738,7 +743,7 @@
 	* ltmain.in (-no-fast-install):  Wrapper script used to add the
 	exeext on again when naming the wrapped executable.
 
-1999-10-03  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+1999-10-03  Gary V. Vaughan  <gvv@techie.com>
 
 	* ltconfig.in:  Set $FILE to @FILE@ for substitution with
 	the value found in libtool.m4 at configure time.
@@ -772,7 +777,7 @@
 	* libltdl/Makefile.am: don't preserve file attributes when
 	  installing the libltdl sources
 
-1999-10-01  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+1999-10-01  Gary V. Vaughan  <gvv@techie.com>
 
 	* configure.in (AC_OUTPUT_COMMANDS): generate ltmain.sh
 	* Makefile.am (ltmain.sh ltconfig): removed.  Automake inserts the 
@@ -790,7 +795,7 @@
 	* ltconfig.in (sco3.2v5): use pass_all deplibs_check_method
 	for SCO3.2.
 
-1999-09-29  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+1999-09-29  Gary V. Vaughan  <gvv@techie.com>
 
 	* ltconfig.in (whole-archive-flag-spec):  I had been
 	wondering why my file system was filling up with empty
@@ -811,7 +816,7 @@
 	* ltconfig.in (sysv5): Added support required for shared
 	library linking on SCO UW7.
 
-1999-09-22  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+1999-09-22  Gary V. Vaughan  <gvv@techie.com>
 
 	* ltconfig.in (whole-archive-flag-spec): test whether the
 	version of GNU ld being used understands --whole-archive
@@ -828,7 +833,7 @@
 	* ltmain.in (CDPATH): Likewise.
 	Reported by Greg McGary <gkm@eng.ascend.com>
 
-1999-08-24  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+1999-08-24  Gary V. Vaughan  <gvv@techie.com>
 
 	* ltconfig.in (ltdll.c, impgen.c): Prevent the shell from
 	expanding variables & backslash escapes when writing these
@@ -869,7 +874,7 @@
 	* libltdl/COPYING.LIB: Update to version 2.1.
 	* libltdl/ltdl.h, libltdl/ltdl.c: Update FSF address.
 
-1999-08-03  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+1999-08-03  Gary V. Vaughan  <gvv@techie.com>
 
 	* libtool.m4 (mingw*, AC_PROG_LD): use tr for carriage return
 	stripping.
@@ -943,7 +948,7 @@
 	* ltconfig.in:  Updated bsdi4 soname specs to be more like
 	linux as discussed on the bsdi mailing list.
 
-1999-07-20  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+1999-07-20  Gary V. Vaughan  <gvv@techie.com>
 
 	* configure.in (AC_PROG_RANLIB):  No longer required as we now use
 	AC_CHECK_TOOL in AC_LIBTOOL_SETUP.
@@ -987,7 +992,7 @@
 
 	* doc/libtool.texi (C++ Libraries):  fixed a typo.
 
-1999-07-06  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+1999-07-06  Gary V. Vaughan  <gvv@techie.com>
 
 	* README-alpha:  improved the release instructions to mention
 	actual list addresses for announcements, and urls for upload
@@ -1002,7 +1007,7 @@
 	* ltconfig.in: finish_cmds for FreeBSD removed
 	* depdemo/l3/Makefile.am: install libl3.la into an extra directory
 
-1999-07-02  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+1999-07-02  Gary V. Vaughan  <gvv@techie.com>
 
 	* configure.in: bumped version to 1.3c.
 
@@ -1083,7 +1088,7 @@
 	* ltmain.in (ltdll.c): Support for crosscompiling from linux to
 	mingw32.
 
-1999-06-23  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+1999-06-23  Gary V. Vaughan  <gvv@techie.com>
 
 	* ltconfig.in (cygwin, export_symbols_cmds): If there is already
 	an extracted and compiled ltdll.c, then don't delete, reextract
@@ -1093,7 +1098,7 @@
 	are paths through the code which run archive_expsym_cmds without
 	running export_symbols_cmds.
 
-1999-06-20  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+1999-06-20  Gary V. Vaughan  <gvv@techie.com>
 
 	* ltconfig.in:  moved the test for NM after the test for
 	no_builtin_flag.
@@ -1121,13 +1126,13 @@
 	* ltconfig.in: CR/LF fix for broken DJGPP bash
 	* ltmain.in: CR/LF fix for DJGPP
 
-1999-06-18  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+1999-06-18  Gary V. Vaughan  <gvv@techie.com>
 
 	* ltmain.in (outputname): When generating the executable wrapper
 	script, $outputname already has the $exeext suffix, so we needn't
 	add it again.
 
-1999-06-16  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+1999-06-16  Gary V. Vaughan  <gvv@techie.com>
 
 	* libltdl/configure.in (ac_cv_lib_dl_dlopen): missing "x" in test
 	comparison corrected.
@@ -1141,7 +1146,7 @@
 	names passed without an extension, we now add a trailing `.' to
 	prevent this from happening.
 
-1999-06-15  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+1999-06-15  Gary V. Vaughan  <gvv@techie.com>
 
 	* libltdl/ltdl.c (sys_wll_close): Strangely enough, Microsoft have
 	decided that LoadLibrary returns `0' for success, yet FreeLibrary
@@ -1172,7 +1177,7 @@
 	* NEWS: Note work-around.
 	Reported by Pavel Roskin <pavel_roskin@geocities.com>
 
-1999-06-09  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+1999-06-09  Gary V. Vaughan  <gvv@techie.com>
 
 	* ltconfig.in (exeext): autoconf's AC_EXEEXT uses "no" to indicate
 	no extension, and we must do the same in order to share the cache
@@ -1186,7 +1191,7 @@
 	* ltconfig.in (exeext): Use quotes in the test, to prevent a 
 	failure in sh.test.
 
-1999-06-09  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+1999-06-09  Gary V. Vaughan  <gvv@techie.com>
 
 	* ltconfig.in: Reordered tests to be more like configure.in's
 	recommended order (programs first, then libraries, etc.).
@@ -1205,7 +1210,7 @@
 	host.  Also test that the compiler accepts the flag, and cache
 	that result too.
 
-1999-06-08  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+1999-06-08  Gary V. Vaughan  <gvv@techie.com>
 
 	* ltconfig.in (LN_S): Accept, in order of decreasing preference:
 	the cached value; an environment setting; ``ln -s'' if it works;
@@ -1359,7 +1364,7 @@
 	* ltconfig.in: linkopts -> compiler_flags for $CC and linker_flags
 	  for $LD, link_all_deplibs=yes on IRIX
 
-1999-05-22  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+1999-05-22  Gary V. Vaughan  <gvv@techie.com>
 
 	* NEWS: insert todays date alongside 1.3.1 release.
 	* Makefile.in: use gnu not gnits rules
@@ -1386,7 +1391,7 @@
 	* doc/PLATFORMS: Updated to 1.3.1 for all platforms I've got.
 	Added sparc-unknown-linux-gnu.
 
-1999-05-21  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+1999-05-21  Gary V. Vaughan  <gvv@techie.com>
 
 	* demo/foo.h: s/PARAMS/LTDL_PARAMS/g
 	* libltdl/ltdl.h: ditto.
@@ -1420,19 +1425,19 @@
 	* libtool.m4 (AC_LIBLTDL_*): set INCLTDL to the path of ltdl.h
 	* ltconfig.in: check for dlopen with -ldl first
 
-1999-05-19  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+1999-05-19  Gary V. Vaughan  <gvv@techie.com>
 
 	* NEWS: Added 1.3.1 news items.
 	* doc/PLATFORMS: updated the boxes I have access to, to 1.3.1
 	in preparation for the next release.
 
-1999-05-18  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+1999-05-18  Gary V. Vaughan  <gvv@techie.com>
 
 	* ltconfig.in (cygwin*, whole_archive_flag_spec): dlltool chokes
 	on this, so leave it unset in this case so that the ltmain code
 	knows it has to unpack convenience archives by itself.
 
-1999-05-17  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+1999-05-17  Gary V. Vaughan  <gvv@techie.com>
 
 	* ltmain.in: Do not exit when an unknown library name is passed
 	passed in, simply warn and continue since some compilers require
@@ -1444,7 +1449,7 @@
 	* ltconfig.in: port to NEC UX/4800.
 	* NEWS: updated.
 	
-1999-05-17  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+1999-05-17  Gary V. Vaughan  <gvv@techie.com>
 
 	* ltconfig.in (beos*, deplibs_check_method): set to pass_all.  BeOS
 	is PIC by default.
@@ -1472,11 +1477,11 @@
 	(instal-data-hook): Add srcdir/instutil to the beginning of the
 	PATH before installing libltdl's sources.
 
-1999-05-09  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+1999-05-09  Gary V. Vaughan  <gvv@techie.com>
 
 	* TODO: updated.
 
-1999-05-06  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+1999-05-06  Gary V. Vaughan  <gvv@techie.com>
 
 	* Makefile.am (install-data-hook):  make sure the install directory
 	is not left world writable.
@@ -1496,7 +1501,7 @@
 	* ltmain.in: Save exit status of link_command before removing
 	symbol table object file.
 
-1999-04-29  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+1999-04-29  Gary V. Vaughan  <gvv@techie.com>
 
 	* doc/PLATFORMS: updated my hpux-10.20 and cygwin box entries.
 
@@ -1521,7 +1526,7 @@
 	* libltdl/acconfig.h: New file.  Add #undefs for defines that
 	would be duplicated.
 
-1999-04-29  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+1999-04-29  Gary V. Vaughan  <gvv@techie.com>
 
 	* libtool.m4 (cygwin*|mingw*, DLLTOOL, OBJDUMP, AS): Only expand the
 	code that makes these configure time checks on hosts that need the
@@ -1543,7 +1548,7 @@
 	(AC_LIBLTDL_CONVENIENCE, AC_LIBLTDL_INSTALLABLE): Fix calls to
 	AC_BEFORE.
 
-1999-04-28  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+1999-04-28  Gary V. Vaughan  <gvv@techie.com>
 
 	* libtool.m4 (ltconfig_enable_win32_dll): pass --enable-win32-dll to
 	ltconfig if this is set.
@@ -1595,7 +1600,7 @@
 	create temporaries in the current directory when output should go
 	elsewhere.  We must perform locking if it does.
 
-1999-04-27  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+1999-04-27  Gary V. Vaughan  <gvv@techie.com>
 
 	* ltmain.in (old_archive_cmds): Ensure that there are always .o
 	objects available before running old_archive_cmds.
@@ -2012,7 +2017,7 @@
 	* ltconfig.in (*_cmds): quote $ so that they're not expanded by
 	the first eval
 
-1999-03-25  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+1999-03-25  Gary V. Vaughan  <gvv@techie.com>
 
 	* ltmain.in ($PATH):  Expand any tildes in the users path to the
 	contents of $HOME to avoid problems with *_cmds splitting and
@@ -2036,7 +2041,7 @@
 
 	* ltconfig.in (ld_shlibs, amigaos*): disable shared libraries
 
-1999-03-23  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+1999-03-23  Gary V. Vaughan  <gvv@techie.com>
 
 	* libltdl/configure.in: the sed expression for finding the shared
 	library extension used to think the . in [.] for the cygwin
@@ -2132,7 +2137,7 @@
 	* tests/Makefile.am (TESTS): added noinst-link.test
 	* doc/libtool.texi: document it
 
-1999-03-19  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+1999-03-19  Gary V. Vaughan  <gvv@techie.com>
 
 	* ltmain.in (dependency_libs): There is no reason to infer that
 	the pseudo library is invalid if dependency_libs='' at
@@ -2189,7 +2194,7 @@
 	  libtool will break ILD, so we ignore it when generating
 	  dependencies.
 	  
-1999-03-17  Gary V. Vaughan  <gary@oranda.demon.co.uk>
+1999-03-17  Gary V. Vaughan  <gvv@techie.com>
 
 	* doc/PLATFORMS: Thanks to Alexandres changes below, both my
 	hp boxes pass the entire test suite.
