--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2000-05-06  Pavel Roskin  <pavel_roskin@geocities.com>
 
+	* libltdl/ltdl.c: Typo.
+
 	* libtool.m4 (AC_LIBTOOL_SETUP): CVS autoconf no longer sets
 	target to "NONE", but to an empty string.
 
